--- a/estilos/inicio.css
+++ b/estilos/inicio.css
@@ -1,8 +1,7 @@
 
 /* SECCION I N I C I O */
 .inicio{
-    background: linear-gradient(to top, rgba(30, 35, 38, 0.434), rgba(30, 35, 38, 0.363)), url(/img/fondo.jpg);
-    background-size: cover;
+      background: url(../img/fondo.jpg);
     height: 100vh;
     color: #fff;
     display: flex;
